# predinet-demo

./: .pdm.toml  PrediNet.ipynb  PrediNetExample.ipynb  PrediNetProp.py  README.md  inspect_imgs.py  predioutput.pl  pyproject.toml  requirements.txt
